--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.13.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "svg-inline-loader": "^0.8.2",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
