--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.13.0",
+    "axios": "^1.5.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "svg-inline-loader": "^0.8.2",
     "vite-plugin-svgr": "^4.3.0"
   },
