--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^9.1.3",
     "svg-inline-loader": "^0.8.2",
     "vite-plugin-svgr": "^4.3.0"
   },
