Update: add environment path

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,19 @@ MONGODB_URI=''
 DATABASE_NAME=''
 APP_HOST=''
 APP_PORT=''
+
+# Brevo email
+BREVO_API_KEY=''
+ADMIN_EMAIL_ADDRESS=''
+ADMIN_EMAIL_NAME=''
+
+ACCESS_TOKEN_SECRET_SIGNATURE=''
+ACCESS_TOKEN_LIFE=''
+
+REFRESH_TOKEN_SECRET_SIGNATURE=''
+REFRESH_TOKEN_LIFE=''
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=''
+CLOUDINARY_API_KEY=''
+CLOUDINARY_API_SECRET=''
