Feat: create, call API register

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,10 +3,16 @@ DATABASE_NAME=''
 APP_HOST=''
 APP_PORT=''
 
+# Author
+AUTHOR=''
+
 # Brevo email
 BREVO_API_KEY=''
 ADMIN_EMAIL_ADDRESS=''
 ADMIN_EMAIL_NAME=''
+
+WEBSITE_DOMAIN_DEVELOPMENT=''
+WEBSITE_DOMAIN_PRODUCTION=''
 
 ACCESS_TOKEN_SECRET_SIGNATURE=''
 ACCESS_TOKEN_LIFE=''
